--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,11 +1,24 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "server.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "public/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
+    {
+      "src": "/images/(.*)",
+      "dest": "/public/images/$1"
+    },
+    {
+      "src": "/favicon.ico",
+      "dest": "/public/images/awaze-logo.svg"
+    },
     {
       "src": "/(.*)",
       "dest": "server.js"
